Google API linked

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome to Piqup!</title>
+
 </head>
 
 <body class="promo">
     <div class="yo"></div>
     <!-- if using loader, use the line below -->
     <script type="text/javascript" src="./bower_components/Loader/loader.js" id="loaderjs" data-app="./js/app.js"></script>
+     <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+
 </body>
 
 </html>
