--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- if using loader, use the line below -->
     <script type="text/javascript" src="./bower_components/Loader/loader.js" id="loaderjs" data-app="./js/app.js"></script>
      <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+     <script src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
 
 </body>
 
